--- a/app/src/main/res/layout/card_music.xml
+++ b/app/src/main/res/layout/card_music.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:cardBackgroundColor="#fd5e94"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
@@ -13,8 +14,8 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             app:srcCompat="@drawable/ic_music_note"
@@ -27,8 +28,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:fontFamily="casual"
             android:maxLines="1"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
             tools:text="@tools:sample/full_names" />
 
     </LinearLayout>
